--- a/ros2_ws/src/vision/package.xml
+++ b/ros2_ws/src/vision/package.xml
@@ -20,15 +20,14 @@
   <build_depend>geometry_msgs</build_depend>
   <build_depend>std_msgs</build_depend>
   <build_depend>eigen3_cmake_module</build_depend>
-  <build_depend>eigen3</build_depend>
 
   <exec_depend>rclpy</exec_depend>
   <exec_depend>sensor_msgs</exec_depend>
   <exec_depend>cv_bridge</exec_depend>
   <exec_depend>auv_msgs</exec_depend>
   <exec_depend>geometry_msgs</exec_depend>
-  <build_depend>std_msgs</build_depend>
-  <exec_depend>eigen3</exec_depend>
+  <exec_depend>std_msgs</exec_depend>
+  <exec_depend>eigen3_cmake_module</exec_depend>
 
   <test_depend>ament_copyright</test_depend>
   <test_depend>ament_flake8</test_depend>
