Fixed typo in dockerfile.nvidia causing failed build and added git submodules inits in build.sh

--- a/Docker/dev/Dockerfile.nvidia
+++ b/Docker/dev/Dockerfile.nvidia
@@ -93,7 +93,7 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
         python3-colcon-common-extensions \
         python3-rosdep \
         python3-vcstools \
-        ros-${ROS_DISTRO}-backwards-ros \
+        ros-${ROS_DISTRO}-backward-ros \
         && rm -rf /var/lib/apt/lists/*
 
 # Initialize rosdep
