Add VS Code dev container config for auv-dev-nvidia Docker container

--- a/.devcontainer/cpu/devcontainer.json
+++ b/.devcontainer/cpu/devcontainer.json
@@ -1,6 +1,6 @@
 {
     "name": "AUV Dev (CPU)",
-    "dockerComposeFile": "../Docker/dev/docker-compose.yml",
+    "dockerComposeFile": "../../Docker/dev/docker-compose.yml",
     "service": "cpu",
     "runServices": ["cpu"],
 
