--- a/Docker/dev/Dockerfile.nvidia
+++ b/Docker/dev/Dockerfile.nvidia
@@ -1,6 +1,18 @@
 # ---------------------------------------------------------
 # Build Arguments
 # ---------------------------------------------------------
+ARG CUDA_MAJOR=12
+ARG CUDA_MINOR=8
+ARG UBUNTU_RELEASE=22
+
+# ---------------------------------------------------------
+# Base Image: NVIDIA CUDA Devel
+# We use 'devel' because we need 'nvcc' to compile ZED ROS2 Wrapper
+# ---------------------------------------------------------
+ARG BASE_IMAGE=nvidia/cuda:${CUDA_MAJOR}.${CUDA_MINOR}.0-devel-ubuntu${UBUNTU_RELEASE}.04
+FROM ${BASE_IMAGE}
+
+# all arguments after pulling from base image are flushed, so we re-declare them
 ARG ZED_SDK_MAJOR=5
 ARG ZED_SDK_MINOR=1
 ARG ZED_SDK_PATCH=1
@@ -9,13 +21,6 @@ ARG CUDA_MINOR=8
 ARG UBUNTU_RELEASE=22
 ARG TENSORRT_MAJOR=10
 ARG TENSORRT_MINOR=9
-
-# ---------------------------------------------------------
-# Base Image: NVIDIA CUDA Devel
-# We use 'devel' because we need 'nvcc' to compile ZED ROS2 Wrapper
-# ---------------------------------------------------------
-ARG BASE_IMAGE=nvidia/cuda:${CUDA_MAJOR}.${CUDA_MINOR}.0-devel-ubuntu${UBUNTU_RELEASE}.04
-FROM ${BASE_IMAGE}
 
 # Set environment variables
 ENV LANG=C.UTF-8 \
@@ -118,12 +123,14 @@ ARG ZED_SDK_URL="https://stereolabs.sfo2.cdn.digitaloceanspaces.com/zedsdk/${ZED
 ARG ZED_SDK_RUN="ZED_SDK_installer.run"
 
 RUN cd /tmp && \
-        wget -q --no-check-certificate -O ${ZED_SDK_RUN} ${ZED_SDK_URL} && \
-        chmod +x ${ZED_SDK_RUN} && \
+    echo "Downloading ZED SDK from: ${ZED_SDK_URL}" && \
+    wget --verbose --tries=5 --timeout=60 --no-check-certificate -O ${ZED_SDK_RUN} ${ZED_SDK_URL} && \
+    echo "Download complete. File size: $(du -h ${ZED_SDK_RUN} | cut -f1)" && \
+    chmod +x ${ZED_SDK_RUN}
         # silent: No user interaction
         # skip_cuda: Don't try to install CUDA Toolkit (Base image already has it)
         # skip_python: Don't install pyzed (Wrapper uses C++, prevents pip conflicts)
-        ./${ZED_SDK_RUN} silent skip_cuda skip_python && \
+RUN cd /tmp && ./${ZED_SDK_RUN} silent skip_cuda skip_python && \
         rm ${ZED_SDK_RUN} && \
         rm -rf /var/lib/apt/lists/*
 
