--- a/.devcontainer/nvidia/devcontainer.json
+++ b/.devcontainer/nvidia/devcontainer.json
@@ -4,8 +4,8 @@
     "service": "nvidia",
     "runServices": ["nvidia"],
 
-    "workspaceFolder": "/root/AUV-2026",
-    "remoteUser": "root",
+    "workspaceFolder": "/home/ros/AUV-2026",
+    "remoteUser": "ros",
 
     // This is vital for connecting to Unity on Windows/Mac
     // It maps localhost:10000 (Container) -> localhost:10000 (Host)
@@ -16,6 +16,9 @@
 
     "customizations": {
         "vscode": {
+            "settings": {
+                "terminal.integrated.defaultProfile.linux": "bash"
+            },
             "extensions": [
                 "althack.ament-task-provider",
                 "betwo.b2-catkin-tools",
@@ -32,5 +35,13 @@
                 "zachflower.uncrustify"
             ]
         }
-    }
+    },
+    "mounts": [
+        {
+            "type": "bind",
+            "source": "${localWorkspaceFolder}",
+            "target": "/home/ros/AUV-2026"
+        }
+    ],
+    "postCreateCommand": "sudo chown -R ros:ros /home/ros/AUV-2026",    
 }
