Changed context on CI/CD when building dev dockerfiles
Changed context on CI/CD when building dev dockerfiles


Missing jobs

--- a/.github/workflows/build-main.yaml
+++ b/.github/workflows/build-main.yaml
@@ -41,7 +41,7 @@ jobs:
       id: build
       uses: docker/build-push-action@v6
       with:
-        context: Docker/dev
+        context: .
         file: Docker/dev/Dockerfile
         platforms: linux/arm64
         push: false
